# modbus-meter-emulator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/: FUNDING.yml  dependabot.yaml
.github/workflows/: on-pull-request.yaml  on-push.yaml
modbus_meter_emulator/: __init__.py  __main__.py
modbus_meter_emulator/meters/: __init__.py  base.py  debug.py  solax.py
modbus_meter_emulator/modbus_server/: __init__.py  modbus_server.py
modbus_meter_emulator/mqtt_client/: mqtt_client.py
modbus_meter_emulator/shared/: config.py
