[tool.poetry]
name = "modbus-meter-emulator"
version = "0.1.0"
description = "Emulates an energy meter with modbus communication"
repository = "https://github.com/bossan/modbus-meter-emulator"

authors = ["Sander Bos <mail@sanderbos.net>"]
readme = "README.md"
packages = [{ include = "modbus_meter_emulator" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
paho-mqtt = "^2.1.0"
pyyaml = "^6.0.3"
pydantic = "^2.11.9"
pymodbus = {extras = ["serial"], version = "^3.8.6"}

[tool.poetry.scripts]
meter = "modbus_meter_emulator.__main__:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
